flussonic (3.68.12)
  
  * request media size before drawing player
  * open HLS in flash player on firefox
  * S3 storage backend for DVR
  * OSMF player with HLS
  * notify about server disconnect in admin panel
  * flu_session inner refactoring
  * added stale authorization cache in flu_session
  * added global session limit and per-ip session limit
  * refactored dvr storage to be able to keep previews and keys
  * fix archive.js to enable selecting video from gap

flussonic (3.68.11)

  * don't crash on preview request
  * don't crash on wrong media request
  * don't crash hls_reader on empty segments

flussonic (3.68.10)

  * /erlyvideo/api/media_info API for checking media size
  * refactoring in RTSP to make publish possible
  * streams can be restarted from web-interface
  * log uploader from admin interface
  * timeshift_abs, timeshift_rel and mpegts now pass their pid to sessions #52
  * fixed dvr mp4 extraction naming #59

flussonic (3.68.9)

  * enable back playlists for files
  * enable rtp with padding
  * additional api /erlyvideo/api/server with misc server info
  * fixing monotone ticker to work with new files

flussonic (3.68.8)

  * fix back autostart streams on rtmp play
  * hds now doesn't fail on zero-length segments
  * skip RTCP with wrong SSRC
  * skip RTCP with 204 type
  * fixed flu_mixer

flussonic (3.68.7)

  * fixed session id
  * RTCP selects channel by SSRC
  * enable disk cleanup for dvr2

flussonic (3.68.6)

  * fixed timeshift_abs in DVR
  * remove autostarting new streams from rtmp play
  * prototype of webm streaming
  * rtsp parser fixes for broken cameras like Grandstreamer
  * fixed playing of live streams in admin panel

flussonic (3.68.5)

  * rate_limit feature
  * mpegts publish password protection
  * connected sessions auth refresh

flussonic (3.68.4)
  
  * migrate_dvr script

flussonic (3.68.3)

  * fixed 'now' timeshift
  * fixed routing in iptv
  * fixed logging subsystem, broken in 3.68.2

flussonic (3.68.2)
