@@ -14,6 +14,8 @@
 Фичи
 ----
 
+* добавить в статистику дисковый IO
+* добавить в статистику CPU load
 * хранение метадаты в архиве
 * задизайнить в HLS: внешний поток ключей, drm, что-то ещё
 * добавить к архиву кеш открытых файлов
