@@ -22,7 +22,7 @@
   {erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", "2ef2f7d3b4"}},
   {parsexml, ".*", {git, "git://github.com/maxlapshin/parsexml.git", "264da95bfa"}},
   {meck, ".*", {git, "git://github.com/eproxus/meck.git", "beb8d14e59"}},
-  {lager, ".*", {git, "https://github.com/basho/lager", "e749242087"}},
+  {lager, ".*", {git, "git://github.com/basho/lager", "e749242087"}},
   {ranch,    ".*", {git, "git://github.com/extend/ranch.git", {tag,"0.6.1"}}},
   {cowboy,    ".*", {git, "git://github.com/extend/cowboy.git", "855e9652fa"}},
   {erlcloud,  ".*", {git, "git://github.com/gleber/erlcloud.git", "7b16d89948"}},
